--- a/resources/views/pages/index.twig
+++ b/resources/views/pages/index.twig
@@ -1,19 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-{% block body %}
-    <h4>Hello Slim&Twig project</h4>
-    <ul>
-        <li>{{ name }}</li>
-        <li>{{ id }}</li>
-    </ul>
-{% endblock %}
-</body>
-</html>
+{% include 'layouts/header.twig' %}
+{% include 'layouts/userNav.twig' %}
+
+<div class="container ">
+    <div class="card w-50 text-center mt-5 mx-auto">
+        <h4 class="mt-3">Slim&Twig project</h4>
+        <h5 class="my-3">Hello there, {{ name ? name : 'stranger' }}!</h5>
+    </div>
+
+
+</div>
+
+
+
