--- a/resources/views/pages/layouts/userNav.twig
+++ b/resources/views/pages/layouts/userNav.twig
@@ -2,17 +2,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="/admin">Main Page</a>
+                <a class="nav-link" href="/">Main Page</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin/users">Users</a>
+                <a class="nav-link" href="/auth">Login</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/sessions">Sessions</a>
-            </li>
+            {% if (user.loged_in) %}
             <li class="nav-item">
                 <a class="nav-link " href="#">Log Out</a>
             </li>
+            {% endif %}
         </ul>
     </div>
 </nav>
