Implemented frontend functionality for login/register/reset views

--- a/resources/views/pages/adminLogin.twig
+++ b/resources/views/pages/adminLogin.twig
@@ -1,1 +1,7 @@
+{% include 'layouts/header.twig' %}
 
+<div class="container mt-5 w-50">
+    <div class="card w-75 p-4 mx-auto mt-5">
+        {% include '/layouts/login.twig' %}
+    </div>
+</div>
