--- a/resources/views/pages/layouts/login.twig
+++ b/resources/views/pages/layouts/login.twig
@@ -1,4 +1,4 @@
-<form action="{{ action }}" name="login">
+<form onsubmit="return false" method="post" name="login">
     <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
