Minor easter egg change

--- a/resources/views/pages/authenticationPage.twig
+++ b/resources/views/pages/authenticationPage.twig
@@ -31,7 +31,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="nameRegister" placeholder="Obi-Wan Kenobi" required>
+                        <input type="text" class="form-control" id="nameRegister" placeholder="General Kenobi" required>
                     </div>
                     <div class="mb-3">
                         <label for="passwordRegister" class="form-label">Password</label>
