Implementing Admin Model & post requests handling

--- a/resources/views/pages/adminLogin.twig
+++ b/resources/views/pages/adminLogin.twig
@@ -1,7 +1,9 @@
 {% include 'layouts/header.twig' %}
 
+
 <div class="container mt-5 w-50">
     <div class="card w-75 p-4 mx-auto mt-5">
+        <h4 class="text-center">Admin Auth</h4>
         {% include '/layouts/login.twig' %}
     </div>
 </div>
