--- a/resources/views/pages/layouts/adminNav.twig
+++ b/resources/views/pages/layouts/adminNav.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+<nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,8 +13,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="/admin/sessions">Sessions</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#">Log Out</a>
+            <li class="nav-item" id="logout">
+                <a class="nav-link " href="/admin">{{ name }} (Log Out)</a>
             </li>
         </ul>
     </div>
