--- a/resources/views/pages/authenticationPage.twig
+++ b/resources/views/pages/authenticationPage.twig
@@ -6,12 +6,12 @@
     <div class="card w-75 p-4 mx-auto mt-5">
         <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active btn-block" id="home-tab" data-toggle="tab" data-target="#login"
+                <button class="nav-link active btn-block" id="login-tab" data-toggle="tab" data-target="#login"
                         type="button" role="tab" aria-controls="login" aria-selected="true">Login
                 </button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link  btn-block" id="profile-tab" data-toggle="tab" data-target="#register"
+                <button class="nav-link  btn-block" id="register-tab" data-toggle="tab" data-target="#register"
                         type="button" role="tab" aria-controls="register" aria-selected="false">Register
                 </button>
             </li>
