--- a/resources/views/pages/resetPass.twig
+++ b/resources/views/pages/resetPass.twig
@@ -7,25 +7,23 @@
     </div>
 
 
-    <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item nav-justified " role="presentation">
-            <button class="nav-link active btn-block" id="step-1-tab" data-toggle="tab" data-target="#step-1" type="button"
+    <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active btn-block" id="step-1-tab" data-toggle="tab" data-target="#step-1"
+                    type="button"
                     role="tab" aria-controls="home" aria-selected="true">Step 1
             </button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link btn-block" id="step-2-tab" data-toggle="tab" data-target="#step-2" type="button" role="tab"
+            <button class="nav-link btn-block" id="step-2-tab" data-toggle="tab" data-target="#step-2" type="button"
+                    role="tab"
                     aria-controls="profile" aria-selected="false" disabled>Step 2
             </button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link btn-block" id="step-3-tab" data-toggle="tab" data-target="#step-3" type="button" role="tab"
+            <button class="nav-link btn-block" id="step-3-tab" data-toggle="tab" data-target="#step-3" type="button"
+                    role="tab"
                     aria-controls="messages" aria-selected="false" disabled>Step 3
-            </button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link btn-block" id="step-4-tab" data-toggle="tab" data-target="#step-4" type="button"
-                    role="tab" aria-controls="settings" aria-selected="false" disabled>Final Step
             </button>
         </li>
     </ul>
@@ -50,7 +48,11 @@
         <div class="tab-pane" id="step-2" role="tabpanel" aria-labelledby="profile-tab">
             <form onsubmit="return false" name="resetVCode" method="post">
                 <div>
-                    Please, enter verification code that was sent to your email.
+                    Please, enter verification code that was sent to your email. We can resend code in <span
+                            id="seconds-left"></span> seconds.
+                </div>
+                <div class="my-3 ">
+                    <button class="btn btn-outline-info" type="button" id="resend-btn" disabled>Send again</button>
                 </div>
                 <div class="my-3">
                     <label for="code" class="form-label">Email address</label>
@@ -79,10 +81,7 @@
                 </div>
             </form>
         </div>
-        <div class="tab-pane" id="step-4" role="tabpanel" aria-labelledby="settings-tab">
-            <h4>Login</h4>
-            {% include '/layouts/login.twig' %}
-        </div>
+
     </div>
 
 </div>
