--- a/resources/views/pages/authenticationPage.twig
+++ b/resources/views/pages/authenticationPage.twig
@@ -25,7 +25,7 @@
             <div class="tab-pane " id="register" role="tabpanel" aria-labelledby="register-tab">
                 <form name="register" onsubmit="return false" method="post" autocomplete="off">
                     <div class="mb-3">
-                        <label for="emailRegister" class="form-label">Email address</label>
+                        <label for="emailRegister" class="form-label">Email</label>
                         <input type="email" class="form-control" id="emailRegister" placeholder="name@example.com"
                                required>
                     </div>
