--- a/resources/views/pages/index.twig
+++ b/resources/views/pages/index.twig
@@ -5,6 +5,10 @@
     <div class="card w-50 text-center mt-5 mx-auto">
         <h4 class="mt-3">Slim&Twig project</h4>
         <h5 class="my-3">Hello there, {{ name ? name : 'stranger' }}!</h5>
+        <h5 class="my-3">Session id: {{ id }}</h5>
+        <pre>
+            {{ attr }}
+        </pre>
     </div>
 
 
