--- a/resources/views/pages/layouts/login.twig
+++ b/resources/views/pages/layouts/login.twig
@@ -8,12 +8,13 @@
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" required>
     </div>
-    <div class="mb-3">
-        <a href="/reset">Forgot password?</a>
-    </div>
-
+    {% if (page is not same as('admin') ) %}
+        <div class="mb-3">
+            <a href="/reset">Forgot password?</a>
+        </div>
+    {% endif %}
     <div>
-        <button class="btn btn-primary" id="confirmLogin" type="submit" >Login</button>
+        <button class="btn btn-primary" id="confirmLogin" type="submit">Login</button>
     </div>
 
 </form>
