--- a/resources/views/pages/index.twig
+++ b/resources/views/pages/index.twig
@@ -6,9 +6,10 @@
         <h4 class="mt-3">Slim&Twig project</h4>
         <h5 class="my-3">Hello there, {{ name ? name : 'stranger' }}!</h5>
         <h5 class="my-3">Session id: {{ id }}</h5>
-        <pre>
-            {{ attr }}
-        </pre>
+        <h5>Ip: {{ attr }}</h5>
+        <h5>
+            {{ sessions }}
+        </h5>
     </div>
 
 
