--- a/resources/views/pages/layouts/adminNav.twig
+++ b/resources/views/pages/layouts/adminNav.twig
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="/admin/sessions">Sessions</a>
             </li>
             <li class="nav-item" id="logout">
-                <a class="nav-link " href="/admin">{{ name }} (Log Out)</a>
+                <a class="nav-link " href="#">Admin: {{ name }} (Log Out)</a>
             </li>
         </ul>
     </div>
