Fixing adminLogin page at logged state

--- a/resources/views/pages/adminLogin.twig
+++ b/resources/views/pages/adminLogin.twig
@@ -4,6 +4,13 @@
 <div class="container mt-5 w-50">
     <div class="card w-75 p-4 mx-auto mt-5">
         <h4 class="text-center">Admin Auth</h4>
-        {% include '/layouts/login.twig' %}
+        {% if(logged) %}
+            {% include '/layouts/login.twig' %}
+        {% else %}
+            <div class="my-5 mx-auto text-center">
+                You are logged in as <span class="font-weight-bold">{{ name }}</span>
+                <button class="btn btn-light mt-3" id="logout">Logout</button>
+            </div>
+        {% endif %}
     </div>
 </div>
