--- a/resources/views/pages/layouts/userNav.twig
+++ b/resources/views/pages/layouts/userNav.twig
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-sm justify-content-end navbar-light bg-light border-bottom">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -7,13 +8,15 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Main Page</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/auth">Login</a>
-            </li>
-            {% if (user.loged_in) %}
-            <li class="nav-item">
-                <a class="nav-link " href="#">Log Out</a>
-            </li>
+
+            {% if (logged_in) %}
+                <li class="nav-item">
+                    <a class="nav-link" id="logout" href="#">{{ logged_in }} (Log Out)</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/auth">Login</a>
+                </li>
             {% endif %}
         </ul>
     </div>
