--- a/resources/views/pages/index.twig
+++ b/resources/views/pages/index.twig
@@ -5,11 +5,9 @@
     <div class="card w-50 text-center mt-5 mx-auto">
         <h4 class="mt-3">Slim&Twig project</h4>
         <h5 class="my-3">Hello there, {{ name }}!</h5>
-        <h5 class="my-3">Session id: {{ sessions.id }}</h5>
-        <h5>Ip: {{ sessions.ip }}</h5>
-        <h5>
-            {{ data }}
-        </h5>
+        <h5 class="my-3">Session id: {{ session.session_id }}</h5>
+        <h5>Ip: {{ session.ip }}</h5>
+
     </div>
 
 
