--- a/resources/views/pages/layouts/login.twig
+++ b/resources/views/pages/layouts/login.twig
@@ -2,6 +2,7 @@
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
         <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+        <span id="error-email-login" class="text-danger" style="font-size: 0.8rem"></span>
     </div>
 
     <div class="mb-2">
