--- a/resources/views/pages/adminLogin.twig
+++ b/resources/views/pages/adminLogin.twig
@@ -7,8 +7,8 @@
         {% if(logged) %}
             {% include '/layouts/login.twig' %}
         {% else %}
-            <div class="my-5 mx-auto text-center">
-                You are logged in as <span class="font-weight-bold">{{ name }}</span>
+            <div class="my-5 mx-auto text-center d-flex flex-column">
+                <span>You are logged in as <span class="font-weight-bold">{{ name }}</span></span>
                 <button class="btn btn-light mt-3" id="logout">Logout</button>
             </div>
         {% endif %}
