Minor frontend fix

--- a/resources/views/pages/adminLogin.twig
+++ b/resources/views/pages/adminLogin.twig
@@ -1,8 +1,8 @@
 {% include 'layouts/header.twig' %}
 
 
-<div class="container mt-5 w-50">
-    <div class="card w-75 p-4 mx-auto mt-5">
+<div class="container mt-5 col-md-6">
+    <div class="card w-auto p-4 mx-auto mt-5">
         <h4 class="text-center">Admin Auth</h4>
         {% if(logged) %}
             {% include '/layouts/login.twig' %}
