--- a/resources/views/pages/authenticationPage.twig
+++ b/resources/views/pages/authenticationPage.twig
@@ -2,8 +2,8 @@
 {% include 'layouts/userNav.twig' %}
 
 
-<div class="container mt-5 w-50">
-    <div class="card w-75 p-4 mx-auto mt-5">
+<div class="container mt-5 col-md-6">
+    <div class="card w-auto p-4 mx-auto mt-5">
         <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active btn-block" id="login-tab" data-toggle="tab" data-target="#login"
