--- a/resources/views/pages/index.twig
+++ b/resources/views/pages/index.twig
@@ -2,7 +2,7 @@
 {% include 'layouts/userNav.twig' %}
 
 <div class="container ">
-    <div class="card w-50 text-center mt-5 mx-auto">
+    <div class="card col-md-6 text-center mt-5 mx-auto">
         <h4 class="mt-3">Slim&Twig project</h4>
         <h5 class="my-3">Hello there, {{ name }}!</h5>
         <h5 class="my-3">Session id: {{ session.session_id }}</h5>
