--- a/resources/views/pages/layouts/adminNav.twig
+++ b/resources/views/pages/layouts/adminNav.twig
@@ -1,5 +1,6 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm justify-content-end navbar-light bg-light border-bottom">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
