--- a/resources/views/pages/resetPass.twig
+++ b/resources/views/pages/resetPass.twig
@@ -1,7 +1,7 @@
 {% include 'layouts/header.twig' %}
 {% include 'layouts/userNav.twig' %}
 
-<div class="card w-50 p-4 mx-auto mt-5">
+<div class="card col-md-6 p-4 mx-auto mt-5">
     <div class="text-center">
         <h4>Password reset</h4>
     </div>
