--- a/resources/views/pages/adminSessions.twig
+++ b/resources/views/pages/adminSessions.twig
@@ -8,6 +8,7 @@
                 <th>Session ID</th>
                 <th>IP</th>
                 <th>User Agent</th>
+                <th>Valid until</th>
                 <th>Login ID</th>
             </tr>
             </thead>
@@ -17,6 +18,7 @@
                     <td>{{ session['session_name'] }}</td>
                     <td>{{ session['ip'] }}</td>
                     <td>{{ session['user_agent'] }}</td>
+                    <td>{{ session['LAST_ACTUVITY'] }}</td>
                     <td>{{ session['user_id'] ? session['user_id'] : 'none' }}</td>
                 </tr>
             {% endfor %}
